cli/tests/snapshots/arguments__subvolume_list_combined.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"list\", \"-otc\", \"-G\", \"+5\", \"--sort\", \"-gen\",\n\"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: List(
                SubvolumeListCommand {
                    parent: false,
                    generation: false,
                    ogeneration: true,
                    uuid: false,
                    parent_uuid: false,
                    received_uuid: false,
                    readonly: false,
                    snapshots_only: false,
                    only_below: true,
                    all: false,
                    deleted: false,
                    table: true,
                    gen_filter: Some(
                        AtLeast(
                            5,
                        ),
                    ),
                    ogen_filter: None,
                    sort: [
                        SortKey {
                            field: Gen,
                            descending: true,
                        },
                    ],
                    path: "/mnt",
                },
            ),
        },
    ),
}
