cli/tests/snapshots/arguments__subvolume_list_gen_filter_atleast.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"list\", \"-G\", \"+50\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: List(
                SubvolumeListCommand {
                    only_below: false,
                    all: false,
                    parent: false,
                    ogeneration: false,
                    generation: false,
                    uuid: false,
                    parent_uuid: false,
                    received_uuid: false,
                    snapshots_only: false,
                    readonly: false,
                    deleted: false,
                    table: false,
                    gen_filter: Some(
                        AtLeast(
                            50,
                        ),
                    ),
                    ogen_filter: None,
                    sort: [],
                    path: "/mnt",
                },
            ),
        },
    ),
}
