cli/tests/snapshots/arguments__subvolume_list_only_below.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"list\", \"-o\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: List(
                SubvolumeListCommand {
                    parent: false,
                    generation: false,
                    ogeneration: false,
                    uuid: false,
                    parent_uuid: false,
                    received_uuid: false,
                    readonly: false,
                    snapshots_only: false,
                    only_below: true,
                    all: false,
                    deleted: false,
                    table: false,
                    gen_filter: None,
                    ogen_filter: None,
                    sort: [],
                    path: "/mnt",
                },
            ),
        },
    ),
}
