cli/tests/snapshots/arguments__subvolume_list_sort_invalid.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"list\", \"--sort\", \"bogus\", \"/mnt\"])"
---
error: invalid value 'bogus' for '--sort <KEYS>': unknown sort key: 'bogus' (expected gen, ogen, rootid, or path)

For more information, try '--help'.
