cli/tests/snapshots/arguments__subvolume_list_with_flags.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"list\", \"-purR\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: List(
                SubvolumeListCommand {
                    only_below: false,
                    all: false,
                    parent: true,
                    ogeneration: false,
                    generation: false,
                    uuid: true,
                    parent_uuid: false,
                    received_uuid: true,
                    snapshots_only: false,
                    readonly: true,
                    deleted: false,
                    table: false,
                    gen_filter: None,
                    ogen_filter: None,
                    sort: [],
                    path: "/mnt",
                },
            ),
        },
    ),
}
